package pharma.Controller.subpanel;

import javafx.event.ActionEvent;

public class Magazzino {
    public void btn_add_action(ActionEvent actionEvent) {
    }
}
